Fix: Background on deal content now extends 500px below view so the black background isn't visible when pulling/throwing deal description

--- a/mobile/resources/scss/example.scss
+++ b/mobile/resources/scss/example.scss
@@ -179,6 +179,16 @@ SINGLE DEAL
                     margin-bottom: 33px;
                     background: url(../images/stippled-line.png) repeat-x bottom left;
                 }
+
+                &:after {
+                    position: absolute;
+                    display: block;
+                    margin-left: -5%;
+                    width: 105%; height: 500px;
+                    top: 100%;
+                    background: url(../images/deal-bg.png) repeat;
+                    content: '';
+                }
             }
 
             #{headings(1,2)} {
